y.output
Grammar

    0 $accept: Program $end

    1 Program: %empty
    2        | Program FunctionDef

    3 FunctionDef: ReturnType FuncName '(' Args ')' '{' VarDecls Statements '}'

    4 ReturnType: T_Int
    5           | T_Void

    6 FuncName: T_Identifier

    7 Args: %empty
    8     | _Args

    9 _Args: T_Int T_Identifier
   10      | _Args ',' T_Int T_Identifier

   11 VarDecls: %empty
   12         | VarDecls VarDecl ';'

   13 VarDecl: T_Int T_Identifier
   14        | VarDecl ',' T_Identifier

   15 Statements: %empty
   16           | Statements Statement

   17 Statement: AssignStatement
   18          | PrintStatement
   19          | CallStatement
   20          | ReturnStatement
   21          | IfStatement
   22          | WhileStatement
   23          | BreakStatement
   24          | ContinueStatement

   25 AssignStatement: T_Identifier '=' Expr ';'

   26 PrintStatement: T_Print '(' T_StringConstant PActuals ')' ';'

   27 PActuals: %empty
   28         | PActuals ',' Expr

   29 CallStatement: CallExpr ';'

   30 CallExpr: T_Identifier '(' Actuals ')'

   31 Actuals: %empty
   32        | Expr PActuals

   33 ReturnStatement: T_Return Expr ';'
   34                | T_Return ';'

   35 IfStatement: If TestExpr StatementsBlock
   36            | If TestExpr StatementsBlock Else StatementsBlock

   37 TestExpr: '(' Expr ')'

   38 StatementsBlock: '{' Statements '}'

   39 If: T_If

   40 Else: T_Else

   41 WhileStatement: While TestExpr StatementsBlock

   42 While: T_While

   43 BreakStatement: T_Break ';'

   44 ContinueStatement: T_Continue ';'

   45 Expr: Expr '+' Expr
   46     | Expr '-' Expr
   47     | Expr '*' Expr
   48     | Expr '/' Expr
   49     | Expr '%' Expr
   50     | Expr '>' Expr
   51     | Expr '<' Expr
   52     | Expr T_Ge Expr
   53     | Expr T_Le Expr
   54     | Expr T_Eq Expr
   55     | Expr T_Ne Expr
   56     | Expr T_Or Expr
   57     | Expr T_And Expr
   58     | '-' Expr
   59     | '!' Expr
   60     | T_IntConstant
   61     | T_Identifier
   62     | ReadInt
   63     | CallExpr
   64     | '(' Expr ')'

   65 ReadInt: T_ReadInt '(' T_StringConstant ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 59
    '%' (37) 49
    '(' (40) 3 26 30 37 64 65
    ')' (41) 3 26 30 37 64 65
    '*' (42) 47
    '+' (43) 45
    ',' (44) 10 14 28
    '-' (45) 46 58
    '/' (47) 48
    ';' (59) 12 25 26 29 33 34 43 44
    '<' (60) 51
    '=' (61) 25
    '>' (62) 50
    '{' (123) 3 38
    '}' (125) 3 38
    error (256)
    T_Int (258) 4 9 10 13
    T_Void (259) 5
    T_Return (260) 33 34
    T_Print (261) 26
    T_ReadInt (262) 65
    T_While (263) 42
    T_If (264) 39
    T_Else (265) 40
    T_Break (266) 43
    T_Continue (267) 44
    T_Le (268) 53
    T_Ge (269) 52
    T_Eq (270) 54
    T_Ne (271) 55
    T_And (272) 57
    T_Or (273) 56
    T_IntConstant (274) 60
    T_StringConstant (275) 26 65
    T_Identifier (276) 6 9 10 13 14 25 30 61


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    Program (38)
        on left: 1 2
        on right: 0 2
    FunctionDef (39)
        on left: 3
        on right: 2
    ReturnType (40)
        on left: 4 5
        on right: 3
    FuncName (41)
        on left: 6
        on right: 3
    Args (42)
        on left: 7 8
        on right: 3
    _Args (43)
        on left: 9 10
        on right: 8 10
    VarDecls (44)
        on left: 11 12
        on right: 3 12
    VarDecl (45)
        on left: 13 14
        on right: 12 14
    Statements (46)
        on left: 15 16
        on right: 3 16 38
    Statement (47)
        on left: 17 18 19 20 21 22 23 24
        on right: 16
    AssignStatement (48)
        on left: 25
        on right: 17
    PrintStatement (49)
        on left: 26
        on right: 18
    PActuals (50)
        on left: 27 28
        on right: 26 28 32
    CallStatement (51)
        on left: 29
        on right: 19
    CallExpr (52)
        on left: 30
        on right: 29 63
    Actuals (53)
        on left: 31 32
        on right: 30
    ReturnStatement (54)
        on left: 33 34
        on right: 20
    IfStatement (55)
        on left: 35 36
        on right: 21
    TestExpr (56)
        on left: 37
        on right: 35 36 41
    StatementsBlock (57)
        on left: 38
        on right: 35 36 41
    If (58)
        on left: 39
        on right: 35 36
    Else (59)
        on left: 40
        on right: 36
    WhileStatement (60)
        on left: 41
        on right: 22
    While (61)
        on left: 42
        on right: 41
    BreakStatement (62)
        on left: 43
        on right: 23
    ContinueStatement (63)
        on left: 44
        on right: 24
    Expr (64)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 25 28 32 33 37 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 64
    ReadInt (65)
        on left: 65
        on right: 62


State 0

    0 $accept: . Program $end

    $default  reduce using rule 1 (Program)

    Program  go to state 1


State 1

    0 $accept: Program . $end
    2 Program: Program . FunctionDef

    $end    shift, and go to state 2
    T_Int   shift, and go to state 3
    T_Void  shift, and go to state 4

    FunctionDef  go to state 5
    ReturnType   go to state 6


State 2

    0 $accept: Program $end .

    $default  accept


State 3

    4 ReturnType: T_Int .

    $default  reduce using rule 4 (ReturnType)


State 4

    5 ReturnType: T_Void .

    $default  reduce using rule 5 (ReturnType)


State 5

    2 Program: Program FunctionDef .

    $default  reduce using rule 2 (Program)


State 6

    3 FunctionDef: ReturnType . FuncName '(' Args ')' '{' VarDecls Statements '}'

    T_Identifier  shift, and go to state 7

    FuncName  go to state 8


State 7

    6 FuncName: T_Identifier .

    $default  reduce using rule 6 (FuncName)


State 8

    3 FunctionDef: ReturnType FuncName . '(' Args ')' '{' VarDecls Statements '}'

    '('  shift, and go to state 9


State 9

    3 FunctionDef: ReturnType FuncName '(' . Args ')' '{' VarDecls Statements '}'

    T_Int  shift, and go to state 10

    $default  reduce using rule 7 (Args)

    Args   go to state 11
    _Args  go to state 12


State 10

    9 _Args: T_Int . T_Identifier

    T_Identifier  shift, and go to state 13


State 11

    3 FunctionDef: ReturnType FuncName '(' Args . ')' '{' VarDecls Statements '}'

    ')'  shift, and go to state 14


State 12

    8 Args: _Args .
   10 _Args: _Args . ',' T_Int T_Identifier

    ','  shift, and go to state 15

    $default  reduce using rule 8 (Args)


State 13

    9 _Args: T_Int T_Identifier .

    $default  reduce using rule 9 (_Args)


State 14

    3 FunctionDef: ReturnType FuncName '(' Args ')' . '{' VarDecls Statements '}'

    '{'  shift, and go to state 16


State 15

   10 _Args: _Args ',' . T_Int T_Identifier

    T_Int  shift, and go to state 17


State 16

    3 FunctionDef: ReturnType FuncName '(' Args ')' '{' . VarDecls Statements '}'

    $default  reduce using rule 11 (VarDecls)

    VarDecls  go to state 18


State 17

   10 _Args: _Args ',' T_Int . T_Identifier

    T_Identifier  shift, and go to state 19


State 18

    3 FunctionDef: ReturnType FuncName '(' Args ')' '{' VarDecls . Statements '}'
   12 VarDecls: VarDecls . VarDecl ';'

    T_Int  shift, and go to state 20

    $default  reduce using rule 15 (Statements)

    VarDecl     go to state 21
    Statements  go to state 22


State 19

   10 _Args: _Args ',' T_Int T_Identifier .

    $default  reduce using rule 10 (_Args)


State 20

   13 VarDecl: T_Int . T_Identifier

    T_Identifier  shift, and go to state 23


State 21

   12 VarDecls: VarDecls VarDecl . ';'
   14 VarDecl: VarDecl . ',' T_Identifier

    ','  shift, and go to state 24
    ';'  shift, and go to state 25


State 22

    3 FunctionDef: ReturnType FuncName '(' Args ')' '{' VarDecls Statements . '}'
   16 Statements: Statements . Statement

    T_Return      shift, and go to state 26
    T_Print       shift, and go to state 27
    T_While       shift, and go to state 28
    T_If          shift, and go to state 29
    T_Break       shift, and go to state 30
    T_Continue    shift, and go to state 31
    T_Identifier  shift, and go to state 32
    '}'           shift, and go to state 33

    Statement          go to state 34
    AssignStatement    go to state 35
    PrintStatement     go to state 36
    CallStatement      go to state 37
    CallExpr           go to state 38
    ReturnStatement    go to state 39
    IfStatement        go to state 40
    If                 go to state 41
    WhileStatement     go to state 42
    While              go to state 43
    BreakStatement     go to state 44
    ContinueStatement  go to state 45


State 23

   13 VarDecl: T_Int T_Identifier .

    $default  reduce using rule 13 (VarDecl)


State 24

   14 VarDecl: VarDecl ',' . T_Identifier

    T_Identifier  shift, and go to state 46


State 25

   12 VarDecls: VarDecls VarDecl ';' .

    $default  reduce using rule 12 (VarDecls)


State 26

   33 ReturnStatement: T_Return . Expr ';'
   34                | T_Return . ';'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52
    ';'            shift, and go to state 53

    CallExpr  go to state 54
    Expr      go to state 55
    ReadInt   go to state 56


State 27

   26 PrintStatement: T_Print . '(' T_StringConstant PActuals ')' ';'

    '('  shift, and go to state 57


State 28

   42 While: T_While .

    $default  reduce using rule 42 (While)


State 29

   39 If: T_If .

    $default  reduce using rule 39 (If)


State 30

   43 BreakStatement: T_Break . ';'

    ';'  shift, and go to state 58


State 31

   44 ContinueStatement: T_Continue . ';'

    ';'  shift, and go to state 59


State 32

   25 AssignStatement: T_Identifier . '=' Expr ';'
   30 CallExpr: T_Identifier . '(' Actuals ')'

    '='  shift, and go to state 60
    '('  shift, and go to state 61


State 33

    3 FunctionDef: ReturnType FuncName '(' Args ')' '{' VarDecls Statements '}' .

    $default  reduce using rule 3 (FunctionDef)


State 34

   16 Statements: Statements Statement .

    $default  reduce using rule 16 (Statements)


State 35

   17 Statement: AssignStatement .

    $default  reduce using rule 17 (Statement)


State 36

   18 Statement: PrintStatement .

    $default  reduce using rule 18 (Statement)


State 37

   19 Statement: CallStatement .

    $default  reduce using rule 19 (Statement)


State 38

   29 CallStatement: CallExpr . ';'

    ';'  shift, and go to state 62


State 39

   20 Statement: ReturnStatement .

    $default  reduce using rule 20 (Statement)


State 40

   21 Statement: IfStatement .

    $default  reduce using rule 21 (Statement)


State 41

   35 IfStatement: If . TestExpr StatementsBlock
   36            | If . TestExpr StatementsBlock Else StatementsBlock

    '('  shift, and go to state 63

    TestExpr  go to state 64


State 42

   22 Statement: WhileStatement .

    $default  reduce using rule 22 (Statement)


State 43

   41 WhileStatement: While . TestExpr StatementsBlock

    '('  shift, and go to state 63

    TestExpr  go to state 65


State 44

   23 Statement: BreakStatement .

    $default  reduce using rule 23 (Statement)


State 45

   24 Statement: ContinueStatement .

    $default  reduce using rule 24 (Statement)


State 46

   14 VarDecl: VarDecl ',' T_Identifier .

    $default  reduce using rule 14 (VarDecl)


State 47

   65 ReadInt: T_ReadInt . '(' T_StringConstant ')'

    '('  shift, and go to state 66


State 48

   60 Expr: T_IntConstant .

    $default  reduce using rule 60 (Expr)


State 49

   30 CallExpr: T_Identifier . '(' Actuals ')'
   61 Expr: T_Identifier .

    '('  shift, and go to state 61

    $default  reduce using rule 61 (Expr)


State 50

   58 Expr: '-' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 67
    ReadInt   go to state 56


State 51

   59 Expr: '!' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 68
    ReadInt   go to state 56


State 52

   64 Expr: '(' . Expr ')'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 69
    ReadInt   go to state 56


State 53

   34 ReturnStatement: T_Return ';' .

    $default  reduce using rule 34 (ReturnStatement)


State 54

   63 Expr: CallExpr .

    $default  reduce using rule 63 (Expr)


State 55

   33 ReturnStatement: T_Return Expr . ';'
   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   53     | Expr . T_Le Expr
   54     | Expr . T_Eq Expr
   55     | Expr . T_Ne Expr
   56     | Expr . T_Or Expr
   57     | Expr . T_And Expr

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82
    ';'    shift, and go to state 83


State 56

   62 Expr: ReadInt .

    $default  reduce using rule 62 (Expr)


State 57

   26 PrintStatement: T_Print '(' . T_StringConstant PActuals ')' ';'

    T_StringConstant  shift, and go to state 84


State 58

   43 BreakStatement: T_Break ';' .

    $default  reduce using rule 43 (BreakStatement)


State 59

   44 ContinueStatement: T_Continue ';' .

    $default  reduce using rule 44 (ContinueStatement)


State 60

   25 AssignStatement: T_Identifier '=' . Expr ';'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 85
    ReadInt   go to state 56


State 61

   30 CallExpr: T_Identifier '(' . Actuals ')'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    $default  reduce using rule 31 (Actuals)

    CallExpr  go to state 54
    Actuals   go to state 86
    Expr      go to state 87
    ReadInt   go to state 56


State 62

   29 CallStatement: CallExpr ';' .

    $default  reduce using rule 29 (CallStatement)


State 63

   37 TestExpr: '(' . Expr ')'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 88
    ReadInt   go to state 56


State 64

   35 IfStatement: If TestExpr . StatementsBlock
   36            | If TestExpr . StatementsBlock Else StatementsBlock

    '{'  shift, and go to state 89

    StatementsBlock  go to state 90


State 65

   41 WhileStatement: While TestExpr . StatementsBlock

    '{'  shift, and go to state 89

    StatementsBlock  go to state 91


State 66

   65 ReadInt: T_ReadInt '(' . T_StringConstant ')'

    T_StringConstant  shift, and go to state 92


State 67

   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   53     | Expr . T_Le Expr
   54     | Expr . T_Eq Expr
   55     | Expr . T_Ne Expr
   56     | Expr . T_Or Expr
   57     | Expr . T_And Expr
   58     | '-' Expr .

    $default  reduce using rule 58 (Expr)


State 68

   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   53     | Expr . T_Le Expr
   54     | Expr . T_Eq Expr
   55     | Expr . T_Ne Expr
   56     | Expr . T_Or Expr
   57     | Expr . T_And Expr
   59     | '!' Expr .

    $default  reduce using rule 59 (Expr)


State 69

   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   53     | Expr . T_Le Expr
   54     | Expr . T_Eq Expr
   55     | Expr . T_Ne Expr
   56     | Expr . T_Or Expr
   57     | Expr . T_And Expr
   64     | '(' Expr . ')'

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82
    ')'    shift, and go to state 93


State 70

   53 Expr: Expr T_Le . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 94
    ReadInt   go to state 56


State 71

   52 Expr: Expr T_Ge . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 95
    ReadInt   go to state 56


State 72

   54 Expr: Expr T_Eq . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 96
    ReadInt   go to state 56


State 73

   55 Expr: Expr T_Ne . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 97
    ReadInt   go to state 56


State 74

   57 Expr: Expr T_And . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 98
    ReadInt   go to state 56


State 75

   56 Expr: Expr T_Or . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 99
    ReadInt   go to state 56


State 76

   51 Expr: Expr '<' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 100
    ReadInt   go to state 56


State 77

   50 Expr: Expr '>' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 101
    ReadInt   go to state 56


State 78

   45 Expr: Expr '+' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 102
    ReadInt   go to state 56


State 79

   46 Expr: Expr '-' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 103
    ReadInt   go to state 56


State 80

   47 Expr: Expr '*' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 104
    ReadInt   go to state 56


State 81

   48 Expr: Expr '/' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 105
    ReadInt   go to state 56


State 82

   49 Expr: Expr '%' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 106
    ReadInt   go to state 56


State 83

   33 ReturnStatement: T_Return Expr ';' .

    $default  reduce using rule 33 (ReturnStatement)


State 84

   26 PrintStatement: T_Print '(' T_StringConstant . PActuals ')' ';'

    $default  reduce using rule 27 (PActuals)

    PActuals  go to state 107


State 85

   25 AssignStatement: T_Identifier '=' Expr . ';'
   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   53     | Expr . T_Le Expr
   54     | Expr . T_Eq Expr
   55     | Expr . T_Ne Expr
   56     | Expr . T_Or Expr
   57     | Expr . T_And Expr

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82
    ';'    shift, and go to state 108


State 86

   30 CallExpr: T_Identifier '(' Actuals . ')'

    ')'  shift, and go to state 109


State 87

   32 Actuals: Expr . PActuals
   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   53     | Expr . T_Le Expr
   54     | Expr . T_Eq Expr
   55     | Expr . T_Ne Expr
   56     | Expr . T_Or Expr
   57     | Expr . T_And Expr

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82

    $default  reduce using rule 27 (PActuals)

    PActuals  go to state 110


State 88

   37 TestExpr: '(' Expr . ')'
   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   53     | Expr . T_Le Expr
   54     | Expr . T_Eq Expr
   55     | Expr . T_Ne Expr
   56     | Expr . T_Or Expr
   57     | Expr . T_And Expr

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82
    ')'    shift, and go to state 111


State 89

   38 StatementsBlock: '{' . Statements '}'

    $default  reduce using rule 15 (Statements)

    Statements  go to state 112


State 90

   35 IfStatement: If TestExpr StatementsBlock .
   36            | If TestExpr StatementsBlock . Else StatementsBlock

    T_Else  shift, and go to state 113

    $default  reduce using rule 35 (IfStatement)

    Else  go to state 114


State 91

   41 WhileStatement: While TestExpr StatementsBlock .

    $default  reduce using rule 41 (WhileStatement)


State 92

   65 ReadInt: T_ReadInt '(' T_StringConstant . ')'

    ')'  shift, and go to state 115


State 93

   64 Expr: '(' Expr ')' .

    $default  reduce using rule 64 (Expr)


State 94

   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   53     | Expr . T_Le Expr
   53     | Expr T_Le Expr .
   54     | Expr . T_Eq Expr
   55     | Expr . T_Ne Expr
   56     | Expr . T_Or Expr
   57     | Expr . T_And Expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 53 (Expr)


State 95

   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   52     | Expr T_Ge Expr .
   53     | Expr . T_Le Expr
   54     | Expr . T_Eq Expr
   55     | Expr . T_Ne Expr
   56     | Expr . T_Or Expr
   57     | Expr . T_And Expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 52 (Expr)


State 96

   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   53     | Expr . T_Le Expr
   54     | Expr . T_Eq Expr
   54     | Expr T_Eq Expr .
   55     | Expr . T_Ne Expr
   56     | Expr . T_Or Expr
   57     | Expr . T_And Expr

    T_Le  shift, and go to state 70
    T_Ge  shift, and go to state 71
    '<'   shift, and go to state 76
    '>'   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '%'   shift, and go to state 82

    $default  reduce using rule 54 (Expr)


State 97

   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   53     | Expr . T_Le Expr
   54     | Expr . T_Eq Expr
   55     | Expr . T_Ne Expr
   55     | Expr T_Ne Expr .
   56     | Expr . T_Or Expr
   57     | Expr . T_And Expr

    T_Le  shift, and go to state 70
    T_Ge  shift, and go to state 71
    '<'   shift, and go to state 76
    '>'   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '%'   shift, and go to state 82

    $default  reduce using rule 55 (Expr)


State 98

   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   53     | Expr . T_Le Expr
   54     | Expr . T_Eq Expr
   55     | Expr . T_Ne Expr
   56     | Expr . T_Or Expr
   57     | Expr . T_And Expr
   57     | Expr T_And Expr .

    T_Le  shift, and go to state 70
    T_Ge  shift, and go to state 71
    T_Eq  shift, and go to state 72
    T_Ne  shift, and go to state 73
    '<'   shift, and go to state 76
    '>'   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '%'   shift, and go to state 82

    $default  reduce using rule 57 (Expr)


State 99

   45 Expr: Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | Expr . '%' Expr
   50     | Expr . '>' Expr
   51     | Expr . '<' Expr
   52     | Expr . T_Ge Expr
   53     | Expr . T_Le Expr
   54     | Expr . T_Eq Expr
   55     | Expr . T_Ne Expr
   56     | Expr . T_Or Expr
   56     | Expr T_Or Expr .
   57     | Expr . T_And Expr

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82

    $default  reduce using rule 56 (Expr)


State 100
